# lolli

./: .envrc-example  .gitignore  pyproject.toml
lolli/: run.py  strategy.py
lolli/data/: CRI.csv  TSLA.csv
tests/: test_lolli.py
